--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3.5.2
         with:
           fetch-depth: 0
-      - uses: sonarsource/sonarqube-scan-action@v1.2.0
+      - uses: sijomc/sonarscan-action@1.1
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
